<resources>
    <string name="app_name">Weedy</string>
    <string name="checklist_icon">checklist</string>
    <string name="edit_icon">Edit</string>
    <string name="delete_icon">Delete</string>
    <string name="watering">Watering</string>
    <string name="germination">Germination</string>
    <string name="seedling">Seedling</string>
    <string name="cutting">Cutting</string>
    <string name="adult">Adult</string>
    <string name="flower">Flower</string>
    <string name="thc">THC</string>
    <string name="ruderalis">Ruderalis</string>
    <string name="indica">Indica</string>
    <string name="sativa">Sativa</string>
    <string name="seed_company">Seed company</string>
    <string name="strain">Strain</string>
    <string name="add_photo">+ add photo</string>
    <string name="cbd">CBD</string>
    <string name="regular">Regular</string>
    <string name="feminized">Feminized</string>
    <string name="automatic">Automatic</string>
    <string name="select_the_growth_sate">Select the growth sate</string>
    <string name="wich_soil_type">Wich Soil type?</string>
    <string name="wich_pot_size">Wich pot size?</string>
    <string name="pot_size">Pot size</string>
    <string name="light_cycle">Light Cycle</string>
    <string name="soil_type">Soil type</string>
    <string name="save">Save</string>
    <string name="continue_button">continue</string>
    <string name="flowering_time">Cycle time</string>
    <string name="hybrid">Hybrid</string>
    <string name="genetic">Genetic</string>
    <string name="genetic_n_specifications">Genetic \nspecifications</string>
    <string name="cannabinoids">Cannabinoids</string>
    <string name="ok">ok</string>
    <string name="vegetation">Vegetation</string>
    <string name="my_plants">My\nPlants</string>
    <string name="search">Search</string>
    <string name="explore_header">Explore the diversity of cannabis genetics</string>
    <string name="select_thc">Select THC</string>
    <string name="explore">Explore</string>
    <string name="filter_btn">Filter</string>
    <string name="reset_btn">Reset</string>
    <string name="health">Health</string>
    <string name="no_data">No data</string>
    <string name="last_checkup">Last Checkup</string>
    <string name="percent_symbol">%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>